@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.codeInspection.offlineViewer;
 
 import com.intellij.codeInsight.daemon.impl.CollectHighlightsUtil;
@@ -23,6 +23,7 @@ import com.intellij.openapi.progress.ProgressManager;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.TextRange;
+import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.psi.*;
 import com.intellij.psi.impl.light.LightElement;
@@ -36,7 +37,6 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
  * @author Dmitry Batkovich
@@ -74,8 +74,8 @@ public final class OfflineDescriptorResolveResult {
   static OfflineDescriptorResolveResult resolve(@NotNull OfflineProblemDescriptor descriptor,
                                                 @NotNull InspectionToolWrapper<?,?> wrapper,
                                                 @NotNull InspectionToolPresentation presentation) {
-    final RefEntity element = descriptor.getRefElement(presentation.getContext().getRefManager());
-    final CommonProblemDescriptor resolvedDescriptor =
+    RefEntity element = descriptor.getRefElement(presentation.getContext().getRefManager());
+    CommonProblemDescriptor resolvedDescriptor =
       ReadAction.compute(() -> createDescriptor(element, descriptor, wrapper, presentation));
     return new OfflineDescriptorResolveResult(element, resolvedDescriptor);
   }
@@ -86,20 +86,21 @@ public final class OfflineDescriptorResolveResult {
                                                           @NotNull OfflineProblemDescriptor offlineDescriptor,
                                                           @NotNull InspectionToolWrapper<?,?> toolWrapper,
                                                           @NotNull InspectionToolPresentation presentation) {
+    Project project = presentation.getContext().getProject();
     if (toolWrapper instanceof GlobalInspectionToolWrapper) {
-      final LocalInspectionToolWrapper localTool = ((GlobalInspectionToolWrapper)toolWrapper).getSharedLocalInspectionToolWrapper();
+      LocalInspectionToolWrapper localTool = ((GlobalInspectionToolWrapper)toolWrapper).getSharedLocalInspectionToolWrapper();
       if (localTool != null) {
-        final CommonProblemDescriptor descriptor = createDescriptor(element, offlineDescriptor, localTool, presentation);
+        CommonProblemDescriptor descriptor = createDescriptor(element, offlineDescriptor, localTool, presentation);
         if (descriptor != null) {
           return descriptor;
         }
       }
-      return createRerunGlobalToolDescriptor((GlobalInspectionToolWrapper)toolWrapper, element, offlineDescriptor);
+      return createRerunGlobalToolDescriptor((GlobalInspectionToolWrapper)toolWrapper, element, offlineDescriptor, project);
     }
-    Project project = presentation.getContext().getProject();
-    if (toolWrapper instanceof LocalInspectionToolWrapper && !(toolWrapper.getTool() instanceof UnfairLocalInspectionTool)) {
+    if (Registry.is("offline.inspections.results.verify") &&
+        toolWrapper instanceof LocalInspectionToolWrapper && !(toolWrapper.getTool() instanceof UnfairLocalInspectionTool)) {
       if (element instanceof RefElement) {
-        final PsiElement psiElement = ((RefElement)element).getPsiElement();
+        PsiElement psiElement = ((RefElement)element).getPsiElement();
         if (psiElement != null) {
           ProblemDescriptor descriptor = ProgressManager.getInstance().runProcess(
             () -> runLocalTool(psiElement,
@@ -117,7 +118,7 @@ public final class OfflineDescriptorResolveResult {
                                                                                       offlineDescriptor,
                                                                                       QuickFix.EMPTY_ARRAY,
                                                                                       project);
-    final QuickFix[] quickFixes = getFixes(descriptor, element, presentation, offlineDescriptor.getHints());
+    QuickFix[] quickFixes = getFixes(descriptor, element, presentation, offlineDescriptor.getHints());
     if (quickFixes != null) {
       descriptor = createProblemDescriptorFromOfflineDescriptor(element,
                                                                 offlineDescriptor,
@@ -132,7 +133,7 @@ public final class OfflineDescriptorResolveResult {
                                                                                       @NotNull OfflineProblemDescriptor offlineDescriptor,
                                                                                       QuickFix @NotNull [] fixes,
                                                                                       @NotNull Project project) {
-    final InspectionManager inspectionManager = InspectionManager.getInstance(project);
+    InspectionManager inspectionManager = InspectionManager.getInstance(project);
     if (element instanceof RefElement) {
       RefElement refElement = (RefElement)element;
       if(refElement.getPsiElement() instanceof PsiFile) {
@@ -146,8 +147,10 @@ public final class OfflineDescriptorResolveResult {
     }
     else if (element instanceof RefModule) {
       return inspectionManager.createProblemDescriptor(offlineDescriptor.getDescription(), ((RefModule)element).getModule(), fixes);
-    } else {
-      return inspectionManager.createProblemDescriptor(offlineDescriptor.getDescription(), fixes);
+    }
+    else {
+      return inspectionManager.createProblemDescriptor(offlineDescriptor.getDescription(), 
+                                                       ContainerUtil.filter(fixes, f -> !(f instanceof LocalQuickFix)).toArray(QuickFix.EMPTY_ARRAY));
     }
   }
 
@@ -170,7 +173,7 @@ public final class OfflineDescriptorResolveResult {
                                                 @NotNull LocalInspectionToolWrapper toolWrapper,
                                                 @NotNull GlobalInspectionContextImpl context) {
     PsiFile containingFile = psiElement.getContainingFile();
-    final LocalInspectionTool localTool = toolWrapper.getTool();
+    LocalInspectionTool localTool = toolWrapper.getTool();
     TextRange textRange = psiElement.getTextRange();
     LOG.assertTrue(textRange != null,
                    "text range must be not null here; " +
@@ -192,7 +195,8 @@ public final class OfflineDescriptorResolveResult {
     Map<LocalInspectionToolWrapper, List<ProblemDescriptor>> map =
       InspectionEngine.inspectEx(Collections.singletonList(toolWrapper), containingFile, textRange, containingFile.getTextRange(), true,
                                  false, true, new DaemonProgressIndicator(), PairProcessor.alwaysTrue());
-    List<ProblemDescriptor> list = ContainerUtil.flatten(map.values());
+    List<ProblemDescriptor> list = new ArrayList<>();
+    map.values().forEach(problemsList -> list.addAll(problemsList));
     for (PsiFile injectedFile : injectedFiles) {
       Map<LocalInspectionToolWrapper, List<ProblemDescriptor>> injectedMap =
         InspectionEngine.inspectEx(Collections.singletonList(toolWrapper), injectedFile, injectedFile.getTextRange(),
@@ -201,11 +205,11 @@ public final class OfflineDescriptorResolveResult {
       list.addAll(ContainerUtil.flatten(injectedMap.values()));
     }
 
-    final int idx = offlineProblemDescriptor.getProblemIndex();
+    int idx = offlineProblemDescriptor.getProblemIndex();
     int curIdx = 0;
     for (ProblemDescriptor descriptor : list) {
-      final PsiNamedElement member = BatchModeDescriptorsUtil.getContainerElement(descriptor.getPsiElement(), localTool, context);
-      final PsiElement element = psiElement instanceof LightElement ? psiElement.getNavigationElement() : psiElement;
+      PsiNamedElement member = BatchModeDescriptorsUtil.getContainerElement(descriptor.getPsiElement(), localTool, context);
+      PsiElement element = psiElement instanceof LightElement ? psiElement.getNavigationElement() : psiElement;
       if (psiElement instanceof PsiFile || element.equals(member)) {
         if (curIdx == idx) {
           return descriptor;
@@ -217,11 +221,11 @@ public final class OfflineDescriptorResolveResult {
     return null;
   }
 
-  private static PsiElement @NotNull [] getElementsIntersectingRange(PsiFile file, final int startOffset, final int endOffset) {
-    final FileViewProvider viewProvider = file.getViewProvider();
-    final Set<PsiElement> result = new LinkedHashSet<>();
+  private static PsiElement @NotNull [] getElementsIntersectingRange(PsiFile file, int startOffset, int endOffset) {
+    FileViewProvider viewProvider = file.getViewProvider();
+    Set<PsiElement> result = new LinkedHashSet<>();
     for (Language language : viewProvider.getLanguages()) {
-      final PsiFile psiRoot = viewProvider.getPsi(language);
+      PsiFile psiRoot = viewProvider.getPsi(language);
       if (HighlightingLevelManager.getInstance(file.getProject()).shouldInspect(psiRoot)) {
         result.addAll(CollectHighlightsUtil.getElementsInRange(psiRoot, startOffset, endOffset, true));
       }
@@ -232,7 +236,7 @@ public final class OfflineDescriptorResolveResult {
   private static QuickFix @Nullable [] getFixes(@NotNull CommonProblemDescriptor descriptor,
                                                 RefEntity entity,
                                                 InspectionToolPresentation presentation, List<String> hints) {
-    final List<QuickFix> fixes = new ArrayList<>(hints == null ? 1 : hints.size());
+    List<QuickFix> fixes = new ArrayList<>(hints == null ? 1 : hints.size());
     if (hints == null) {
       addFix(descriptor, entity, fixes, null, presentation);
     }
@@ -244,16 +248,15 @@ public final class OfflineDescriptorResolveResult {
     return fixes.isEmpty() ? null : fixes.toArray(QuickFix.EMPTY_ARRAY);
   }
 
-  private static void addFix(@NotNull CommonProblemDescriptor descriptor, RefEntity entity, List<? super QuickFix> fixes, String hint, InspectionToolPresentation presentation) {
+  private static void addFix(@NotNull CommonProblemDescriptor descriptor, RefEntity entity, List<? super QuickFix> fixes, String hint, @NotNull InspectionToolPresentation presentation) {
     ContainerUtil.addAllNotNull(fixes, presentation.findQuickFixes(descriptor, entity, hint));
   }
 
   private static CommonProblemDescriptor createRerunGlobalToolDescriptor(@NotNull GlobalInspectionToolWrapper wrapper,
                                                                          @Nullable RefEntity entity,
-                                                                         OfflineProblemDescriptor offlineDescriptor) {
-
-
-    QuickFix rerunFix = new QuickFix() {
+                                                                         @NotNull OfflineProblemDescriptor offlineDescriptor,
+                                                                         @NotNull Project project) {
+    QuickFix<?> rerunFix = new QuickFix<>() {
       @Nls
       @NotNull
       @Override
@@ -281,11 +284,10 @@ public final class OfflineDescriptorResolveResult {
     };
     List<String> hints = offlineDescriptor.getHints();
     if (hints != null && entity instanceof RefModule) {
-      List<QuickFix> fixes =
-        hints.stream().map(hint -> wrapper.getTool().getQuickFix(hint)).filter(f -> f != null).collect(Collectors.toList());
-      return new ModuleProblemDescriptorImpl(ArrayUtil.append(fixes.toArray(QuickFix.EMPTY_ARRAY), rerunFix), offlineDescriptor.getDescription(), ((RefModule)entity).getModule());
+      List<QuickFix> fixes = hints.stream().map(hint -> wrapper.getTool().getQuickFix(hint)).filter(f -> f != null).toList();
+      return InspectionManager.getInstance(project).createProblemDescriptor(offlineDescriptor.getDescription(), ((RefModule)entity).getModule(), ArrayUtil.append(fixes.toArray(QuickFix.EMPTY_ARRAY), rerunFix));
     }
-    return new CommonProblemDescriptorImpl(new QuickFix[]{rerunFix}, offlineDescriptor.getDescription());
+    return InspectionManager.getInstance(project).createProblemDescriptor(offlineDescriptor.getDescription(), new QuickFix[]{rerunFix});
   }
 
   private static final class ProblemDescriptorBackedByRefElement implements ProblemDescriptor {
