@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.ide.actions;
 
 import com.intellij.ide.fileTemplates.FileTemplate;
@@ -8,13 +8,13 @@ import com.intellij.ide.fileTemplates.impl.FileTemplateConfigurable;
 import com.intellij.ide.fileTemplates.impl.FileTemplateManagerImpl;
 import com.intellij.openapi.actionSystem.*;
 import com.intellij.openapi.project.Project;
-import com.intellij.openapi.util.text.StringUtil;
+import com.intellij.openapi.util.text.Strings;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.psi.PsiFile;
 import com.intellij.util.ArrayUtil;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Objects;
 
 final class SaveFileAsTemplateAction extends AnAction {
@@ -23,7 +23,7 @@ final class SaveFileAsTemplateAction extends AnAction {
     Project project = Objects.requireNonNull(e.getData(CommonDataKeys.PROJECT));
     String fileText = Objects.requireNonNull(e.getData(PlatformCoreDataKeys.FILE_TEXT));
     VirtualFile file = Objects.requireNonNull(e.getData(CommonDataKeys.VIRTUAL_FILE));
-    String extension = StringUtil.notNullize(file.getExtension());
+    String extension = Strings.notNullize(file.getExtension());
     String nameWithoutExtension = file.getNameWithoutExtension();
     PsiFile psiFile = e.getData(CommonDataKeys.PSI_FILE);
     for (SaveFileAsTemplateHandler handler : SaveFileAsTemplateHandler.EP_NAME.getExtensionList()) {
@@ -43,12 +43,17 @@ final class SaveFileAsTemplateAction extends AnAction {
     configurable.setTemplate(template, FileTemplateManagerImpl.getInstanceImpl(project).getDefaultTemplateDescription());
     SaveFileAsTemplateDialog dialog = new SaveFileAsTemplateDialog(project, configurable);
     if (dialog.showAndGet()) {
-      templateManager.setTemplates(FileTemplateManager.DEFAULT_TEMPLATES_CATEGORY, Arrays.asList(ArrayUtil.append(templates, template)));
+      templateManager.setTemplates(FileTemplateManager.DEFAULT_TEMPLATES_CATEGORY, List.of(ArrayUtil.append(templates, template)));
     }
   }
 
   @Override
   public void update(@NotNull AnActionEvent e) {
-    e.getPresentation().setEnabled(e.getData(CommonDataKeys.VIRTUAL_FILE) != null && e.getData(PlatformDataKeys.FILE_TEXT) != null);
+    e.getPresentation().setEnabled(e.getData(CommonDataKeys.VIRTUAL_FILE) != null && e.getData(PlatformCoreDataKeys.FILE_TEXT) != null);
+  }
+
+  @Override
+  public @NotNull ActionUpdateThread getActionUpdateThread() {
+    return ActionUpdateThread.BGT;
   }
 }
